Updated names of testimonials

--- a/_public/about.html
+++ b/_public/about.html
@@ -44,11 +44,11 @@
         <br>
         <a target="_blank" href="./assets/pdfs/Pacific Basin Negotiators Letter of Recommendation - Rayner Tan.pdf">Testimonial from Pacific Basin Negotiators Managing Director</a>
         <br>
-        <a target="_blank" href="./assets/pdfs/Retired Professional Reference - Rayner Tan.pdf">Testimonial from retired industry professional</a>
+        <a target="_blank" href="./assets/pdfs/Software Development Team Leader Reference - Rayner Tan.pdf">Testimonial from Software Development Team Leader</a>
         <br>
         <a target="_blank" href="./assets/pdfs/LandShark Letter Of Recommendation - Rayner Tan.pdf">Testimonial from Co-founder of LandShark Games Pte. Ltd.</a>
         <br>
-        <a target="_blank" href="./assets/pdfs/University of Curtin Letter Of Recommendation - Rayner Tan.pdf">Testimonial from University of Curtin Professor</a>
+        <a target="_blank" href="./assets/pdfs/University of Curtin Letter Of Recommendation - Rayner Tan.pdf">Testimonial from University of Curtin Head of Programme</a>
         <br>
         <a target="_blank" href="./assets/webarchive/WebArchive_OurStudents_RaynerTanXueWen_TemasekPolytechnic.html">Testimonial from Temasek Polytechnic, Singapore</a>
         <br>
