--- a/_public/about.html
+++ b/_public/about.html
@@ -94,7 +94,7 @@
         <ul class="content-text">
             <li>Diploma with Merit in Game Design and Development, Temasek Polytechnic</li>
             <ul>
-                <li>The Lee Kuan Yew Award for Mathetics and Science</li>
+                <li>The Lee Kuan Yew Award for Mathematics and Science</li>
                 <li>Course Gold Medal</li>
                 <li>Infocomm Media Development Authority (IMDA) Excellence Award</li>
                 <li>Jurong Port Special Industry Prize</li>
