Added pictures to about.

--- a/_public/about.html
+++ b/_public/about.html
@@ -70,23 +70,13 @@
 
         <hr>
 
-        <span class="heading">Technical Skills</span>
-
-        <p>I actively seek to pick up new skills and gain knowledge in fields that interest me. My current skills are as follows.</p>
-
-        <span class="content-text">Current Skills:</span>
-        <ul class="content-text">
-            <li>Familiar with Design Patterns</li>
-            <li>Proficient in Swift, C#, and C++ programming languages</li>
-            <li>Experienced in Unity Game Engine, Xcode IDE</li>
-            <li>Professionally trained in Adobe Photoshop and Autodesk Maya</li>
-            <li>Possesses basic Web Development skills</li>
-        </ul>
-
-
-        <hr>
 
         <span class="heading">Achievements</span>
+
+        <br>
+        <img src="assets/misc/scs-ityouthaward-finalists.jpeg" class="screenshot-portrait">
+        <img src="assets/misc/graduation_lky.jpg" class="screenshot-portrait">
+        <br>
 
         <p>Over the years I have joined various competitions and won a number of awards. Listed below are some of these awards and competitions.</p>
 
@@ -133,6 +123,23 @@
         </ul>
 
 
+
+
+        <hr>
+
+
+        <span class="heading">Technical Skills</span>
+
+        <p>I actively seek to pick up new skills and gain knowledge in fields that interest me. My current skills are as follows.</p>
+
+        <span class="content-text">Current Skills:</span>
+        <ul class="content-text">
+            <li>Familiar with Design Patterns</li>
+            <li>Proficient in Swift, C#, and C++ programming languages</li>
+            <li>Experienced in Unity Game Engine, Xcode IDE</li>
+            <li>Professionally trained in Adobe Photoshop and Autodesk Maya</li>
+            <li>Possesses basic Web Development skills</li>
+        </ul>
 
 
         <hr>
