--- a/_public/about.html
+++ b/_public/about.html
@@ -146,7 +146,7 @@
 
         <span class="heading">Education</span>
 
-        <p>I studied in the Diploma in Game Design and Development at Temasek Polytechnic, graduating top of the course and was award The Lee Kuan Yew Award for Mathematics and Science, a national-level award given to top technology and science graduates (only 15 individuals in the nation per year). Previously, I was part of the pioneer batch of students at the School of Science and Technology, Singapore where I took my Singapore-Cambridge General Certificate of Education (Ordinary Level) Examinations.</p>
+        <p>I studied in the Diploma in Game Design and Development at Temasek Polytechnic, graduating top of the course and was awarded The Lee Kuan Yew Award for Mathematics and Science, a national-level award given to top technology and science graduates (only 15 individuals in the nation per year). Previously, I was part of the pioneer batch of students at the School of Science and Technology, Singapore where I took my Singapore-Cambridge General Certificate of Education (Ordinary Level) Examinations.</p>
 
         <span class="content-text">List of Schools:</span>
         <ul class="content-text">
