Added LSG work experience to portfolio
Makes it easier for me to share my experience at LSG!

--- a/_public/works.html
+++ b/_public/works.html
@@ -36,6 +36,20 @@
 
     <div class="container">
 
+      <a href="projectSubPages/landsharkgames.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">LandShark Games</span>
+            <br>
+            Work Experience
+          </div>
+
+          <img class="picture-inverse" src="assets/images/landsharkgames.png">
+
+        </div>
+      </a>
+
       <a href="projectSubPages/daburutools.html">
         <div class="project grayscale">
 
@@ -169,6 +183,26 @@
     <!--sm projects-->
 
     <div class="project-wrapper-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/landsharkgames.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">LandShark<br/>Games</span>
+          <br>
+          <span class="sub-heading">Work Experience</span>
+          <br>
+          <a href="projectSubPages/landsharkgames.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <hr class="line-sm">
 
       <div class="project-bar-sm">
         <div class="project-sm">
