--- a/_public/projectSubPages/landsharkgames.html
+++ b/_public/projectSubPages/landsharkgames.html
@@ -74,6 +74,7 @@
         <li>Established Unity iOS build pipelines, writing various tools and plugins</li>
         <li>Developed new player profile system, working on both backend & frontend</li>
         <li>Implemented gameplay features for upcoming new IP: Grifford</li>
+        <li>Worked with art team to enhance 3D animation pipeline</li>
         <li>Helped establish tools for the new 3D pipelines in the company</li>
         <li>Provided update support for current IPs, increasing product stability</li>
         <li>Worked on many other systems including asset management enhancements, debug tools and environments, new gameplay features for new IPs, etc.</li>
