Added base project page for just list it

--- a/_public/works.html
+++ b/_public/works.html
@@ -36,6 +36,21 @@
 
     <div class="container">
 
+      <a href="projectSubPages/justlistit.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">Just List It</span>
+            <br>
+            Utility App
+          </div>
+
+          <img class="picture-inverse" src="assets/images/justlistit.png">
+
+        </div>
+      </a>
+
+
       <a href="projectSubPages/landsharkgames.html">
         <div class="project grayscale">
 
@@ -183,6 +198,26 @@
     <!--sm projects-->
 
     <div class="project-wrapper-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/justlistit.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">Just<br/>List It</span>
+          <br>
+          <span class="sub-heading">Utility App</span>
+          <br>
+          <a href="projectSubPages/justlistit.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <hr class="line-sm">
 
       <div class="project-bar-sm">
         <div class="project-sm">
