Added app store url link to Just List It.

--- a/_public/projectSubPages/justlistit.html
+++ b/_public/projectSubPages/justlistit.html
@@ -67,7 +67,7 @@
 
       <div class="downloadIcons">
 
-        <a href="" class="downloadIcon" target="_blank">
+        <a href="https://apps.apple.com/sg/app/just-list-it/id6449754718" class="downloadIcon" target="_blank">
           <i class="fa fa-apple fa-3x fa-border"></i>
         </a>
 
