Fixed Just List It link and added text

--- a/_public/projectSubPages/justlistit.html
+++ b/_public/projectSubPages/justlistit.html
@@ -59,6 +59,12 @@
 
       <p>Just List It is as simple as it gets. Designed to mimic a clipboard or small notebook where you list down simple checklists of tasks that you want to focus on each day. You only see tasks one day at a time, giving you complete focus. No need to set reminders, etc. Just list it into the day and get it done. Simple yet effective.</p>
 
+      <hr>
+
+      <p>This was my first published project since coming back from my two year church mission doing volunteer work. It was a challenge to myself to get back to publishing things. I wanted to push myself to learn SwiftUI, CoreData, CloudKit, and StoreKit. I made this app mostly in between train rides to and fro my internship office.</p>
+
+      <p>The idea came about as I was working on a much bigger project for a daily and weekly planner organiser inspired from the one I used on my mission (which was called AreaBook). I wanted something simplier and also wanted to digitize my clipboard checklist that I had but always found cumbersome to bring around. Thus the idea to digitize the checklist clipboard was realised and made into reality.</p>
+
       <!-- <p>Maybe some testimonials from Abigail and from Xavier and Eunice and others.</p> -->
       
       <br>
@@ -67,7 +73,7 @@
 
       <div class="downloadIcons">
 
-        <a href="https://apps.apple.com/sg/app/just-list-it/id6449754718" class="downloadIcon" target="_blank">
+        <a href="https://apps.apple.com/app/id6449754718" class="downloadIcon" target="_blank">
           <i class="fa fa-apple fa-3x fa-border"></i>
         </a>
 
