Added screenshots and testimonial to just list it

--- a/_public/projectSubPages/justlistit.html
+++ b/_public/projectSubPages/justlistit.html
@@ -65,9 +65,24 @@
 
       <p>The idea came about as I was working on a much bigger project for a daily and weekly planner organiser inspired from the one I used on my mission (which was called AreaBook). I wanted something simplier and also wanted to digitize my clipboard checklist that I had but always found cumbersome to bring around. Thus the idea to digitize the checklist clipboard was realised and made into reality.</p>
 
-      <!-- <p>Maybe some testimonials from Abigail and from Xavier and Eunice and others.</p> -->
+      <hr>
+      <p><strong>Some words from users</strong></p>
+      <p><i>"This app feels just like my regular paper to-do list but it makes it easier to keep track of tasks that I keep putting off (really love the migrate tasks to tomorrow prompt!). Having the visual reminder of which tasks I’ve put off from the day before has helped me prioritise better."</i> - Eunice</p>
       
+
+
       <br>
+
+      <img src="../assets/screenshots/justlistit_1.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/justlistit_2.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/justlistit_3.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/justlistit_4.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+
+
       <br>
       <br>
 
