Added Xavier's testimonial

--- a/_public/projectSubPages/justlistit.html
+++ b/_public/projectSubPages/justlistit.html
@@ -68,7 +68,7 @@
       <hr>
       <p><strong>Some words from users</strong></p>
       <p><i>"This app feels just like my regular paper to-do list but it makes it easier to keep track of tasks that I keep putting off (really love the migrate tasks to tomorrow prompt!). Having the visual reminder of which tasks I’ve put off from the day before has helped me prioritise better."</i> - Eunice</p>
-      
+      <p><i>"I found it easy to learn how to use it. Functions are straight forward and simple to track and add new tasks. My favourite features would be the statistics page and the confetti in completing a task as it gives me a sense of accomplishment and celebration."</i> - Xavier</p>
 
 
       <br>
