Added VizDayz marketing page

--- a/_public/works.html
+++ b/_public/works.html
@@ -36,6 +36,22 @@
 
     <div class="container">
 
+      <a href="projectSubPages/vizdayz.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">VizDayz</span>
+            <br>
+            Countdown App
+          </div>
+
+          <img class="picture-inverse" src="assets/images/vizdayz.png">
+
+        </div>
+      </a>
+
+
+
       <a href="projectSubPages/justlistit.html">
         <div class="project grayscale">
 
@@ -198,6 +214,27 @@
     <!--sm projects-->
 
     <div class="project-wrapper-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/vizdayz.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">VizDayz</span>
+          <br>
+          <span class="sub-heading">Countdown App</span>
+          <br>
+          <a href="projectSubPages/vizdayz.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <hr class="line-sm">
+
 
       <div class="project-bar-sm">
         <div class="project-sm">
