Updated vizdayz project page
- New screenshots
- New link. (pending release)

--- a/_public/projectSubPages/vizdayz.html
+++ b/_public/projectSubPages/vizdayz.html
@@ -63,14 +63,19 @@
 
       <br>
 
-      <!-- <img src="../assets/screenshots/justlistit_1.png" alt="" class="screenshot-portrait">
+      <img src="../assets/screenshots/vizdayz_1.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
-      <img src="../assets/screenshots/justlistit_2.png" alt="" class="screenshot-portrait">
+      <img src="../assets/screenshots/vizdayz_2.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
-      <img src="../assets/screenshots/justlistit_3.png" alt="" class="screenshot-portrait">
+      <img src="../assets/screenshots/vizdayz_3.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
-      <img src="../assets/screenshots/justlistit_4.png" alt="" class="screenshot-portrait">
-      <br class="sm-only-break"> -->
+      <img src="../assets/screenshots/vizdayz_4.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/vizdayz_5.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/screenshots/vizdayz_6.png" alt="" class="screenshot-portrait">
+      <br class="sm-only-break">
+
 
 
       <br>
@@ -78,8 +83,7 @@
 
       <div class="downloadIcons">
 
-        <!-- NEED TO UPDATE THIS TO THE REAL URL NEXT TIME -->
-        <a href="https://apps.apple.com/app/id6449754718" class="downloadIcon" target="_blank">
+        <a href="https://apps.apple.com/app/id6463895033" class="downloadIcon" target="_blank">
           <i class="fa fa-apple fa-3x fa-border"></i>
         </a>
 
