--- a/_public/works.html
+++ b/_public/works.html
@@ -116,7 +116,7 @@
           <div class="description">
             <span class="heading">Chessgeon v2</span>
             <br>
-            iOS / Android
+            iOS
           </div>
 
           <img class="picture-inverse" src="assets/images/chessgeon2.png">
@@ -130,7 +130,7 @@
           <div class="description">
             <span class="heading">Chessgeon</span>
             <br>
-            iOS / Android
+            Android APK
           </div>
 
           <img class="picture-inverse" src="assets/images/chessgeon.png">
@@ -144,7 +144,7 @@
           <div class="description">
             <span class="heading">Different</span>
             <br>
-            PC Game
+            PC
           </div>
 
           <img class="picture-inverse" src="assets/images/different.png">
@@ -158,7 +158,7 @@
           <div class="description">
             <span class="heading">Cellulose</span>
             <br>
-            iOS / Android
+            iOS / PC
           </div>
 
           <img class="picture-inverse" src="assets/images/cellulose.png">
@@ -172,7 +172,7 @@
           <div class="description">
             <span class="heading">Life's Lemons</span>
             <br>
-            PC Game
+            PC
           </div>
 
           <img class="picture-inverse" src="assets/images/lifeslemons.png">
@@ -186,7 +186,7 @@
           <div class="description">
             <span class="heading">DontSpam</span>
             <br>
-            iOS / Android
+            iOS
           </div>
 
           <img class="picture-inverse" src="assets/images/dontspam.png">
@@ -200,7 +200,7 @@
           <div class="description">
             <span class="heading">ShapeFlip</span>
             <br>
-            iOS Game
+            iOS
           </div>
 
           <img class="picture" src="assets/images/shapeflip.png">
@@ -324,7 +324,7 @@
         <div class="description-sm">
           <span class="heading">Chessgeon<br/>ver. 2</span>
           <br>
-          <span class="sub-heading">iOS / Android</span>
+          <span class="sub-heading">iOS</span>
           <br>
           <a href="projectSubPages/chessgeon_ver2.html">
             <div class="button-sm">
@@ -344,7 +344,7 @@
         <div class="description-sm">
           <span class="heading">Chessgeon</span>
           <br>
-          <span class="sub-heading">iOS / Android</span>
+          <span class="sub-heading">Android APK</span>
           <br>
           <a href="projectSubPages/chessgeon.html">
             <div class="button-sm">
@@ -364,7 +364,7 @@
         <div class="description-sm">
           <span class="heading">Different</span>
           <br>
-          <span class="sub-heading">PC Game</span>
+          <span class="sub-heading">PC</span>
           <br>
           <a href="projectSubPages/different.html">
             <div class="button-sm">
@@ -384,7 +384,7 @@
         <div class="description-sm">
           <span class="heading">Cellulose</span>
           <br>
-          <span class="sub-heading">iOS / Android</span>
+          <span class="sub-heading">iOS / PC</span>
           <br>
           <a href="projectSubPages/cellulose.html">
             <div class="button-sm">
@@ -406,7 +406,7 @@
           <br>
           <span class="heading">Lemons</span>
           <br>
-          <span class="sub-heading">PC Game</span>
+          <span class="sub-heading">PC</span>
           <br>
           <a href="projectSubPages/lifeslemons.html">
             <div class="button-sm">
@@ -426,7 +426,7 @@
         <div class="description-sm">
           <span class="heading">DontSpam</span>
           <br>
-          <span class="sub-heading">iOS / Android</span>
+          <span class="sub-heading">iOS</span>
           <br>
           <a href="projectSubPages/dontspam.html">
             <div class="button-sm">
@@ -446,7 +446,7 @@
         <div class="description-sm">
           <span class="heading">ShapeFlip</span>
           <br>
-          <span class="sub-heading">iOS Game</span>
+          <span class="sub-heading">iOS</span>
           <br>
           <a href="projectSubPages/shapeflip.html">
             <div class="button-sm">
