Updated with project years

--- a/_public/works.html
+++ b/_public/works.html
@@ -43,6 +43,8 @@
             <span class="heading">VizDayz</span>
             <br>
             Countdown App
+            <br>
+            (2023)
           </div>
 
           <img class="picture-inverse" src="assets/images/vizdayz.png">
@@ -59,6 +61,8 @@
             <span class="heading">Just List It</span>
             <br>
             Utility App
+            <br>
+            (2023)
           </div>
 
           <img class="picture-inverse" src="assets/images/justlistit.png">
@@ -74,6 +78,8 @@
             <span class="heading">LandShark Games</span>
             <br>
             Work Experience
+            <br>
+            (2016-2022)
           </div>
 
           <img class="picture-inverse" src="assets/images/landsharkgames.png">
@@ -88,6 +94,8 @@
             <span class="heading">DaburuTools</span>
             <br>
             Unity Tools
+            <br>
+            (2016)
           </div>
 
           <img class="picture-inverse" src="assets/images/daburutools.png">
@@ -102,6 +110,8 @@
             <span class="heading">Tower Power</span>
             <br>
             SteamVR
+            <br>
+            (2016)
           </div>
 
           <img class="picture-inverse" src="assets/images/steamvr.png">
@@ -117,6 +127,8 @@
             <span class="heading">Chessgeon v2</span>
             <br>
             iOS
+            <br>
+            (2019)
           </div>
 
           <img class="picture-inverse" src="assets/images/chessgeon2.png">
@@ -131,6 +143,8 @@
             <span class="heading">Chessgeon</span>
             <br>
             Android APK
+            <br>
+            (2016)
           </div>
 
           <img class="picture-inverse" src="assets/images/chessgeon.png">
@@ -145,6 +159,8 @@
             <span class="heading">Different</span>
             <br>
             PC
+            <br>
+            (2016)
           </div>
 
           <img class="picture-inverse" src="assets/images/different.png">
@@ -159,6 +175,8 @@
             <span class="heading">Cellulose</span>
             <br>
             iOS / PC
+            <br>
+            (2015)
           </div>
 
           <img class="picture-inverse" src="assets/images/cellulose.png">
@@ -173,6 +191,8 @@
             <span class="heading">Life's Lemons</span>
             <br>
             PC
+            <br>
+            (2015)
           </div>
 
           <img class="picture-inverse" src="assets/images/lifeslemons.png">
@@ -187,6 +207,8 @@
             <span class="heading">DontSpam</span>
             <br>
             iOS
+            <br>
+            (2015)
           </div>
 
           <img class="picture-inverse" src="assets/images/dontspam.png">
@@ -201,6 +223,8 @@
             <span class="heading">ShapeFlip</span>
             <br>
             iOS
+            <br>
+            (2015)
           </div>
 
           <img class="picture" src="assets/images/shapeflip.png">
@@ -223,7 +247,7 @@
         <div class="description-sm">
           <span class="heading">VizDayz</span>
           <br>
-          <span class="sub-heading">Countdown App</span>
+          <span class="sub-heading">Countdown App<br>(2023)</span>
           <br>
           <a href="projectSubPages/vizdayz.html">
             <div class="button-sm">
@@ -244,7 +268,7 @@
         <div class="description-sm">
           <span class="heading">Just<br/>List It</span>
           <br>
-          <span class="sub-heading">Utility App</span>
+          <span class="sub-heading">Utility App<br>(2023)</span>
           <br>
           <a href="projectSubPages/justlistit.html">
             <div class="button-sm">
@@ -264,7 +288,7 @@
         <div class="description-sm">
           <span class="heading">LandShark<br/>Games</span>
           <br>
-          <span class="sub-heading">Work Experience</span>
+          <span class="sub-heading">Work Experience<br>(2016-2022)</span>
           <br>
           <a href="projectSubPages/landsharkgames.html">
             <div class="button-sm">
@@ -284,7 +308,7 @@
         <div class="description-sm">
           <span class="heading">Daburu<br/>Tools</span>
           <br>
-          <span class="sub-heading">Unity Tools</span>
+          <span class="sub-heading">Unity Tools<br>(2016)</span>
           <br>
           <a href="projectSubPages/daburutools.html">
             <div class="button-sm">
@@ -304,7 +328,7 @@
         <div class="description-sm">
           <span class="heading">Tower<br/>Power</span>
           <br>
-          <span class="sub-heading">SteamVR</span>
+          <span class="sub-heading">SteamVR<br>(2016)</span>
           <br>
           <a href="projectSubPages/towerpower.html">
             <div class="button-sm">
@@ -324,7 +348,7 @@
         <div class="description-sm">
           <span class="heading">Chessgeon<br/>ver. 2</span>
           <br>
-          <span class="sub-heading">iOS</span>
+          <span class="sub-heading">iOS (2019)</span>
           <br>
           <a href="projectSubPages/chessgeon_ver2.html">
             <div class="button-sm">
@@ -344,7 +368,7 @@
         <div class="description-sm">
           <span class="heading">Chessgeon</span>
           <br>
-          <span class="sub-heading">Android APK</span>
+          <span class="sub-heading">Android APK<br>(2016)</span>
           <br>
           <a href="projectSubPages/chessgeon.html">
             <div class="button-sm">
@@ -364,7 +388,7 @@
         <div class="description-sm">
           <span class="heading">Different</span>
           <br>
-          <span class="sub-heading">PC</span>
+          <span class="sub-heading">PC (2016)</span>
           <br>
           <a href="projectSubPages/different.html">
             <div class="button-sm">
@@ -384,7 +408,7 @@
         <div class="description-sm">
           <span class="heading">Cellulose</span>
           <br>
-          <span class="sub-heading">iOS / PC</span>
+          <span class="sub-heading">iOS / PC<br>(2015)</span>
           <br>
           <a href="projectSubPages/cellulose.html">
             <div class="button-sm">
@@ -402,11 +426,9 @@
         </div>
 
         <div class="description-sm">
-          <span class="heading">Life's</span>
+          <span class="heading">Life's<br>Lemons</span>
           <br>
-          <span class="heading">Lemons</span>
-          <br>
-          <span class="sub-heading">PC</span>
+          <span class="sub-heading">PC (2015)</span>
           <br>
           <a href="projectSubPages/lifeslemons.html">
             <div class="button-sm">
@@ -426,7 +448,7 @@
         <div class="description-sm">
           <span class="heading">DontSpam</span>
           <br>
-          <span class="sub-heading">iOS</span>
+          <span class="sub-heading">iOS (2015)</span>
           <br>
           <a href="projectSubPages/dontspam.html">
             <div class="button-sm">
@@ -446,7 +468,7 @@
         <div class="description-sm">
           <span class="heading">ShapeFlip</span>
           <br>
-          <span class="sub-heading">iOS</span>
+          <span class="sub-heading">iOS (2015)</span>
           <br>
           <a href="projectSubPages/shapeflip.html">
             <div class="button-sm">
