Added chessgeon app link

--- a/_public/projectSubPages/chessgeon_ver2.html
+++ b/_public/projectSubPages/chessgeon_ver2.html
@@ -48,16 +48,14 @@
 
       <p>The animations and events systems are all handled by my custom helper tool <a href="./daburutools.html">Daburu Tools</a> which I made as a plugin for Unity for various projects.</p>
 
-      <p>You can find the source of the project on my GitHub repository here: <a href="https://github.com/raynertanxw/Project-Chessgeon" target="_blank">https://github.com/raynertanxw/Project-Chessgeon</a></p>
+      <!-- <p>You can find the source of the project on my GitHub repository here: <a href="https://github.com/raynertanxw/Project-Chessgeon" target="_blank">https://github.com/raynertanxw/Project-Chessgeon</a></p> -->
 
       <img src="../assets/screenshots/chessgeon2_1.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
 
-      <p><strong>EDIT: The game is no longer supported and has been retired from the App Store and Google Play Store.</strong></p>
-
       <div class="downloadIcons">
-        <a href="https://github.com/raynertanxw/Project-Chessgeon" class="downloadIcon" target="_blank">
-          <i class="fa fa-github fa-3x fa-border"></i>
+        <a href="https://apps.apple.com/us/app/chessgeon/id1462724224" class="downloadIcon" target="_blank">
+          <i class="fa fa-apple fa-3x fa-border"></i>
         </a>
       </div>
 
