--- a/_public/hometools/index.html
+++ b/_public/hometools/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Tools</title>
 
     <style>
-        /* TODO */
+        #container {
+            padding: 16px;
+            text-align: center;
+        }
+
         h1 {
             font-family: cursive;
         }
+
+        ul {
+            padding: 0px;
+        }
         li {
             font-family: cursive;
+            list-style: none;
+            font-size: larger;
         }
+
         a:link {
             text-decoration: none;
+            color: black;
+        }
+
+        a:visited {
+            color: black;
+        }
+
+        a:hover {
+            color: gray;
         }
     </style>
 </head>
+
 <body>
-    <h1>Stella & Rayner Home Tools</h1>
-    <ul>
-        <li><a href="./meals/planner.html">Meal Planner</a></li>
-    </ul>
+    <div id="container">
+
+        <h1>Stella & Rayner<br>Home Tools</h1>
+        <ul>
+            <li><a href="./meals/planner.html">Meal Planner</a></li>
+        </ul>
+
+    </div>
 </body>
+
 </html>
